feat: added 404 page for tx/id and acc/id

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -569,5 +569,7 @@
   "message_is_binary": "Съобщение за данни",
   "add_account_or_contact": "Добавете акаунт или контакт",
   "hint_new_account": "Това е нов акаунт. Все още не е регистриран във веригата, т.е. няма транзакции.",
-  "account_new": "Нов"
+  "account_new": "Нов",
+  "page_not_found_title": "Ресурсът не е намерен",
+  "page_not_found_hint": "Дори с блокчейн някои пространства все още са непокрити. Като този тук!"
 }
