--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -569,5 +569,7 @@
   "message_is_binary": "Μήνυμα δεδομένων",
   "add_account_or_contact": "Προσθήκη λογαριασμού ή επαφής",
   "hint_new_account": "Αυτός είναι ένας νέος λογαριασμός. Δεν έχει εγγραφεί ακόμα στην αλυσίδα, δηλαδή δεν έχει συναλλαγές.",
-  "account_new": "Νέος"
+  "account_new": "Νέος",
+  "page_not_found_title": "Ο πόρος δεν βρέθηκε",
+  "page_not_found_hint": "Ακόμη και με το blockchain, ορισμένοι χώροι εξακολουθούν να είναι ακάλυπτοι. Όπως αυτό εδώ!"
 }
