--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -569,5 +569,7 @@
   "message_is_binary": "डेटा संदेश",
   "add_account_or_contact": "खाता या संपर्क जोड़ें",
   "hint_new_account": "यह एक नया खाता है। यह अभी तक श्रृंखला पर पंजीकृत नहीं है, अर्थात इसका कोई लेन-देन नहीं है।",
-  "account_new": "नया"
+  "account_new": "नया",
+  "page_not_found_title": "संसाधन नहीं मिला",
+  "page_not_found_hint": "यहां तक कि ब्लॉकचेन के साथ भी कुछ रिक्त स्थान अभी भी खुले हुए हैं। यहाँ की तरह!"
 }
