--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -569,5 +569,7 @@
   "message_is_binary": "Сообщение данных",
   "add_account_or_contact": "Добавить учетную запись или контакт",
   "hint_new_account": "Это новый аккаунт. Он еще не зарегистрирован в цепочке, т.е. не имеет транзакций.",
-  "account_new": "Новый"
+  "account_new": "Новый",
+  "page_not_found_title": "Ресурс не найден",
+  "page_not_found_hint": "Даже с блокчейном некоторые области остаются открытыми. Как вот этот!"
 }
