--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -569,5 +569,7 @@
   "message_is_binary": "Дата Мессаге",
   "add_account_or_contact": "Додајте налог или контакт",
   "hint_new_account": "Ово је нови налог. Још увек није регистрован у ланцу, тј. нема трансакција.",
-  "account_new": "Нова"
+  "account_new": "Нова",
+  "page_not_found_title": "Ресурс Није пронађен",
+  "page_not_found_hint": "Чак и са блокчеином, неки простори су још увек откривени. Као овај овде!"
 }
