--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -569,5 +569,7 @@
   "message_is_binary": "Повідомлення даних",
   "add_account_or_contact": "Додайте обліковий запис або контакт",
   "hint_new_account": "Це новий обліковий запис. Він ще не зареєстрований у мережі, тобто не має транзакцій.",
-  "account_new": "новий"
+  "account_new": "новий",
+  "page_not_found_title": "Ресурс не знайдено",
+  "page_not_found_hint": "Навіть з блокчейном деякі простори все ще не охоплені. Як цей тут!"
 }
