--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -569,5 +569,7 @@
   "message_is_binary": "Mensaxe de datos",
   "add_account_or_contact": "Engadir conta ou contacto",
   "hint_new_account": "Esta é unha conta nova. Aínda non está rexistrado na cadea, é dicir, non ten transaccións.",
-  "account_new": "Novo"
+  "account_new": "Novo",
+  "page_not_found_title": "Non se atopou o recurso",
+  "page_not_found_hint": "Mesmo con blockchain algúns espazos aínda están ao descuberto. Como este aquí!"
 }
