wip: wallet reset option

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -571,5 +571,8 @@
   "hint_new_account": "Това е нов акаунт. Все още не е регистриран във веригата, т.е. няма транзакции.",
   "account_new": "Нов",
   "page_not_found_title": "Ресурсът не е намерен",
-  "page_not_found_hint": "Дори с блокчейн някои пространства все още са непокрити. Като този тук!"
+  "page_not_found_hint": "Дори с блокчейн някои пространства все още са непокрити. Като този тук!",
+  "danger_zone": "Опасна зона",
+  "reset_wallet": "Нулирайте портфейла",
+  "reset_wallet_hint": "Нулирането на портфейла премахва всички локално съхранени данни, акаунти и настройки от портфейла. Можете да импортирате отново всичките си акаунти, като използвате съответната фраза за възстановяване. Вашите Signa и токени се съхраняват сигурно в блокчейна и следователно не се губят, докато притежавате фразите за възстановяване."
 }
