--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -571,5 +571,8 @@
   "hint_new_account": "यह एक नया खाता है। यह अभी तक श्रृंखला पर पंजीकृत नहीं है, अर्थात इसका कोई लेन-देन नहीं है।",
   "account_new": "नया",
   "page_not_found_title": "संसाधन नहीं मिला",
-  "page_not_found_hint": "यहां तक कि ब्लॉकचेन के साथ भी कुछ रिक्त स्थान अभी भी खुले हुए हैं। यहाँ की तरह!"
+  "page_not_found_hint": "यहां तक कि ब्लॉकचेन के साथ भी कुछ रिक्त स्थान अभी भी खुले हुए हैं। यहाँ की तरह!",
+  "danger_zone": "खतरा क्षेत्र",
+  "reset_wallet": "वॉलेट रीसेट करें",
+  "reset_wallet_hint": "वॉलेट को रीसेट करने से सभी स्थानीय रूप से संग्रहीत डेटा, खातों और सेटिंग्स को वॉलेट से हटा दिया जाता है। आप संबंधित पुनर्प्राप्ति वाक्यांश का उपयोग करके अपने सभी खातों को पुनः आयात कर सकते हैं। आपके सिग्ना और टोकन ब्लॉकचैन पर सुरक्षित रूप से संग्रहीत हैं और इसलिए जब तक आप पुनर्प्राप्ति वाक्यांशों के कब्जे में हैं तब तक खो नहीं जाते हैं।"
 }
