--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -571,5 +571,8 @@
   "hint_new_account": "Ini akun baru. Itu belum terdaftar di rantai, yaitu tidak memiliki transaksi.",
   "account_new": "Baru",
   "page_not_found_title": "Sumber Daya Tidak ditemukan",
-  "page_not_found_hint": "Bahkan dengan blockchain, beberapa ruang masih terbuka. Seperti ini di sini!"
+  "page_not_found_hint": "Bahkan dengan blockchain, beberapa ruang masih terbuka. Seperti ini di sini!",
+  "danger_zone": "Zona Bahaya",
+  "reset_wallet": "Atur Ulang Dompet",
+  "reset_wallet_hint": "Menyetel ulang dompet menghapus semua data, akun, dan pengaturan yang disimpan secara lokal dari dompet. Anda dapat mengimpor ulang semua akun Anda menggunakan frase pemulihan masing-masing. Signa dan token Anda disimpan dengan aman di blockchain dan karenanya tidak hilang selama Anda memiliki frase pemulihan."
 }
