--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -571,5 +571,8 @@
   "hint_new_account": "Questo è un nuovo account. Non è ancora registrato sulla catena, cioè non ha transazioni.",
   "account_new": "Nuovo",
   "page_not_found_title": "Risorsa Non trovata",
-  "page_not_found_hint": "Anche con blockchain alcuni spazi sono ancora scoperti. Come questo qui!"
+  "page_not_found_hint": "Anche con blockchain alcuni spazi sono ancora scoperti. Come questo qui!",
+  "danger_zone": "Zona pericolosa",
+  "reset_wallet": "Ripristina portafoglio",
+  "reset_wallet_hint": "Il ripristino del portafoglio rimuove tutti i dati, gli account e le impostazioni memorizzati localmente dal portafoglio. Puoi reimportare tutti i tuoi account utilizzando la rispettiva frase di recupero. I tuoi Signa e i token sono archiviati in modo sicuro sulla blockchain e pertanto non vengono persi finché sei in possesso delle frasi di ripristino."
 }
