--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -571,5 +571,8 @@
   "hint_new_account": "これは新しいアカウントです。まだチェーンに登録されていません。つまり、トランザクションはありません。",
   "account_new": "新しい",
   "page_not_found_title": "リソースが見つかりません",
-  "page_not_found_hint": "ブロックチェーンを使用しても、いくつかのスペースがまだ明らかにされています。ここのように！"
+  "page_not_found_hint": "ブロックチェーンを使用しても、いくつかのスペースがまだ明らかにされています。ここのように！",
+  "danger_zone": "危険区域",
+  "reset_wallet": "ウォレットのリセット",
+  "reset_wallet_hint": "ウォレットをリセットすると、ローカルに保存されたすべてのデータ、アカウント、および設定がウォレットから削除されます。それぞれの復元フレーズを使用して、すべてのアカウントを再インポートできます。あなたのシグナとトークンはブロックチェーンに安全に保管されているため、復元フレーズを所有している限り失われることはありません。"
 }
