--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -571,5 +571,8 @@
   "hint_new_account": "Это новый аккаунт. Он еще не зарегистрирован в цепочке, т.е. не имеет транзакций.",
   "account_new": "Новый",
   "page_not_found_title": "Ресурс не найден",
-  "page_not_found_hint": "Даже с блокчейном некоторые области остаются открытыми. Как вот этот!"
+  "page_not_found_hint": "Даже с блокчейном некоторые области остаются открытыми. Как вот этот!",
+  "danger_zone": "Зона опасности",
+  "reset_wallet": "Сбросить кошелек",
+  "reset_wallet_hint": "Сброс кошелька удаляет все локально сохраненные данные, учетные записи и настройки из кошелька. Вы можете повторно импортировать все свои учетные записи, используя соответствующую фразу восстановления. Ваша Signa и токены надежно хранятся в блокчейне и поэтому не теряются до тех пор, пока у вас есть фразы для восстановления."
 }
