--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -571,5 +571,8 @@
   "hint_new_account": "Ово је нови налог. Још увек није регистрован у ланцу, тј. нема трансакција.",
   "account_new": "Нова",
   "page_not_found_title": "Ресурс Није пронађен",
-  "page_not_found_hint": "Чак и са блокчеином, неки простори су још увек откривени. Као овај овде!"
+  "page_not_found_hint": "Чак и са блокчеином, неки простори су још увек откривени. Као овај овде!",
+  "danger_zone": "Опасна зона",
+  "reset_wallet": "Ресетуј новчаник",
+  "reset_wallet_hint": "Ресетовање новчаника уклања све локално сачуване податке, налоге и подешавања из новчаника. Можете поново да увезете све своје налоге користећи одговарајућу фразу за опоравак. Ваша Сигна и токени су безбедно ускладиштени на блокчејну и стога нису изгубљени све док имате фразе за опоравак."
 }
