--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -571,5 +571,8 @@
   "hint_new_account": "Це новий обліковий запис. Він ще не зареєстрований у мережі, тобто не має транзакцій.",
   "account_new": "новий",
   "page_not_found_title": "Ресурс не знайдено",
-  "page_not_found_hint": "Навіть з блокчейном деякі простори все ще не охоплені. Як цей тут!"
+  "page_not_found_hint": "Навіть з блокчейном деякі простори все ще не охоплені. Як цей тут!",
+  "danger_zone": "НЕБЕЗПЕЧНА ЗОНА",
+  "reset_wallet": "Скинути гаманець",
+  "reset_wallet_hint": "Скидання гаманця видаляє всі локально збережені дані, облікові записи та налаштування з гаманця. Ви можете повторно імпортувати всі свої облікові записи за допомогою відповідної фрази відновлення. Ваш Signa та токени надійно зберігаються в блокчейні, тому не втрачаються, доки у вас є фрази відновлення."
 }
