--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -571,5 +571,8 @@
   "hint_new_account": "Aquest és un compte nou. Encara no està registrat a la cadena, és a dir, no té transaccions.",
   "account_new": "Nou",
   "page_not_found_title": "No s'ha trobat el recurs",
-  "page_not_found_hint": "Fins i tot amb blockchain alguns espais encara queden al descobert. Com aquest aquí!"
+  "page_not_found_hint": "Fins i tot amb blockchain alguns espais encara queden al descobert. Com aquest aquí!",
+  "danger_zone": "Zona perillosa",
+  "reset_wallet": "Restableix Wallet",
+  "reset_wallet_hint": "El restabliment de la cartera elimina totes les dades, els comptes i la configuració emmagatzemats localment de la cartera. Podeu tornar a importar tots els vostres comptes mitjançant la frase de recuperació corresponent. El vostre signe i fitxes s'emmagatzemen de forma segura a la cadena de blocs i, per tant, no es perden mentre tingueu les frases de recuperació."
 }
