--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -571,5 +571,8 @@
   "hint_new_account": "Tämä on uusi tili. Se ei ole vielä rekisteröitynyt ketjuun, eli sillä ei ole tapahtumia.",
   "account_new": "Uusi",
   "page_not_found_title": "Resurssia ei löydy",
-  "page_not_found_hint": "Jopa lohkoketjussa jotkut tilat jäävät vielä auki. Kuten tämä täällä!"
+  "page_not_found_hint": "Jopa lohkoketjussa jotkut tilat jäävät vielä auki. Kuten tämä täällä!",
+  "danger_zone": "Vaaravyöhyke",
+  "reset_wallet": "Nollaa lompakko",
+  "reset_wallet_hint": "Lompakon nollaaminen poistaa kaikki paikallisesti tallennetut tiedot, tilit ja asetukset lompakosta. Voit tuoda kaikki tilisi uudelleen käyttämällä vastaavaa palautuslauseketta. Signasi ja tunnuksesi on tallennettu turvallisesti lohkoketjuun, joten ne eivät häviä niin kauan kuin sinulla on palautuslausekkeet."
 }
