--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -571,5 +571,8 @@
   "hint_new_account": "Esta é unha conta nova. Aínda non está rexistrado na cadea, é dicir, non ten transaccións.",
   "account_new": "Novo",
   "page_not_found_title": "Non se atopou o recurso",
-  "page_not_found_hint": "Mesmo con blockchain algúns espazos aínda están ao descuberto. Como este aquí!"
+  "page_not_found_hint": "Mesmo con blockchain algúns espazos aínda están ao descuberto. Como este aquí!",
+  "danger_zone": "Zona de perigo",
+  "reset_wallet": "Restablecer carteira",
+  "reset_wallet_hint": "Restablecer a carteira elimina todos os datos, contas e configuracións almacenados localmente da carteira. Podes volver importar todas as túas contas usando a frase de recuperación respectiva. Os teus signos e tokens almacénanse de forma segura na cadea de bloques e, polo tanto, non se perden mentres esteas en posesión das frases de recuperación."
 }
