--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -571,5 +571,8 @@
   "hint_new_account": "Tai nauja paskyra. Jis dar neužregistruotas tinkle, t. y. neturi sandorių.",
   "account_new": "Nauja",
   "page_not_found_title": "Išteklius nerastas",
-  "page_not_found_hint": "Net naudojant „blockchain“, kai kurios erdvės vis dar neuždengtos. Kaip šis čia!"
+  "page_not_found_hint": "Net naudojant „blockchain“, kai kurios erdvės vis dar neuždengtos. Kaip šis čia!",
+  "danger_zone": "Pavojaus zona",
+  "reset_wallet": "Iš naujo nustatyti Piniginę",
+  "reset_wallet_hint": "Iš naujo nustatant piniginę iš piniginės pašalinami visi vietoje saugomi duomenys, paskyros ir nustatymai. Galite iš naujo importuoti visas savo paskyras naudodami atitinkamą atkūrimo frazę. Jūsų „Signa“ ir žetonai yra saugiai saugomi „blockchain“, todėl neprarandami tol, kol turite atkūrimo frazes."
 }
