--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -571,5 +571,8 @@
   "hint_new_account": "这是一个新帐户。它还没有在链上注册，即没有交易。",
   "account_new": "新的",
   "page_not_found_title": "找不到资源",
-  "page_not_found_hint": "即使使用区块链，一些空间仍未被发现。就像这里的这个！"
+  "page_not_found_hint": "即使使用区块链，一些空间仍未被发现。就像这里的这个！",
+  "danger_zone": "危险区",
+  "reset_wallet": "重置钱包",
+  "reset_wallet_hint": "重置钱包会从钱包中删除所有本地存储的数据、帐户和设置。您可以使用相应的恢复短语重新导入所有帐户。您的 Signa 和代币安全地存储在区块链上，因此只要您拥有助记词就不会丢失。"
 }
